--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.1",
+    "lucide-react": "^0.451.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
