--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-swipeable": "^7.0.1",
+    "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
